02/06/2005
----------
1. Romanian (ro & ro.utf8) lang and prefs.template translation minor update
   (thanks to Gabriel Hojda, gabriel.hojda.AT.gmail.com)
2. multiple charset support for mailfilter
3. clean code in mailfilte.pl for minor speedup


02/04/2005
----------
1. fix a bug in calendar that day of month was not properly checked when
   the user clicked calendar from webmail
   (thanks to Alex Teslik, alex.AT.acatysmoof.com for his fix)


02/03/2005
----------
1. fix a bug that in-reply-to header may be not correctly handled if it
   is expressed as <messageid> "message description"
2. fix a problem that recv time was used as message timestamp if
   recvtime-sendtime>7day, which caused problems when the user tries to
   move very old messages to mail server through imapd
   (reported by cyberic99.AT.hotmail.com)


02/02/2005
----------
1. fix a bug in fetchmail.pl readdata() which always returns true
   after remote pop3 socket is closed unespectedly, this caused a fever
   loop in fetchmail(), thus introduced huge process...
   (reported by Mike Fahey, mfahey.AT.enter.net)
2. Romanian (ro & ro.utf8) lang and template files translation update
   (thanks to Gabriel Hojda, gabriel.hojda.AT.gmail.com)


02/01/2005
----------
1. rename option log_filter_detail to debug_mailfilter,
   add option debug_request, debug_fork to openwebmail.conf.default
2. new mirror site at Jyvaskyla, Finland
   http://ws182.wts.fi/openwebmail/
   (thanks to Pasi Sjoholm, pasi.sjoholm.AT.tieto-x.fi)
3. remove stale mirror sites
   http://www.brc.com.br/openwebmail
   http://openwebmail.typoheads.com


01/30/2005
----------
1. fix a bug in spellcheck that unreognized words in URL would cause
   error in spellcheck output
   (reported by Thomas Chung, tchung.AT.openwebmail.org)
2. show link to original message saved in draft folder in sendmail error message
3. add charset support for stationery book
   replace all stationary in code to stationery


01/29/2005
----------