@@ -17,7 +17,7 @@
 
 name			Open WebMail
 version			2.50
-releasedate		20050206
+releasedate		20050207
 
 ##############################################################################
 # host dependent configuration
